--- a/.github/workflows/api-testing.yaml
+++ b/.github/workflows/api-testing.yaml
@@ -24,16 +24,16 @@ jobs:
         pip install -r requirements.txt
         pip install pytest pytest-cov
 
-    #  Run tests with coverage report
-    - name: Run tests with coverage
+    #  Run tests 
+    - name: Run tests with
       run: |
-        pytest --cov=app --cov-report=xml --cov-report=term-missing
+        pytest 
 
-    #  Upload coverage report to Codecov
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}   
-        file: ./coverage.xml
-        fail_ci_if_error: true
+    # #  Upload coverage report to Codecov
+    # - name: Upload coverage to Codecov
+    #   uses: codecov/codecov-action@v3
+    #   with:
+    #     token: ${{ secrets.CODECOV_TOKEN }}   
+    #     file: ./coverage.xml
+    #     fail_ci_if_error: true
  
