--- a/.github/workflows/api-testing.yaml
+++ b/.github/workflows/api-testing.yaml
@@ -24,7 +24,12 @@ jobs:
         pip install -r requirements.txt
         pip install pytest requests
 
+
     - name: Run tests
+      env:
+          CI: true
+          HEADLESS: true
+          FIREFLY_URL: http://18.203.139.174:8080
       run: |
         export PYTHONPATH=$PYTHONPATH:$(pwd)
         pytest -v
